# elfeckcom

./: .gitignore  Controllers.hs  Dockerfile  EditParser.hs  Main.hs  MdParser.hs  README  TODO  Utils.hs  View.hs  config.txt  dockify.sh  elfeckcom.cabal  exampleconfig.txt  run.sh  run_and_compile.sh  test.txt
docker/: dockerrun.sh  dockerupdate.sh
scripts/: CreateUser.hs
src/: BetterMdParser.hs  CreateUser.hs  EntryParser.hs  EveStuffs.hs  Main.hs  MdParser.hs  Model.hs  PostParser.hs  Utils.hs  View.hs  test.txt
src/Model/: CryptoUtils.hs  Model.hs  Types.hs
src/Scripts/: CreateUser.hs  EveStuffs.hs  ManualDB.hs
src/Web/: BetterMdParser.hs  FileHandler.hs  GetHandler.hs  HandlerGet.hs  HandlerPost.hs  JsonParser.hs  PostHandler.hs  PostParser.hs  Utils.hs  View.hs
static/: edit.js  index.css  login.css  login.js
static/content/: test.txt
static/css/: LD29.css  drivel.css  edit.css  evexpl.css  index.css  indexdark.css  input.css  jquery-ui.min.css  jquery-ui.theme.min.css  login.css  site.css  upload.css  whyiliketrees.css
static/css/lib/: jquery-ui.structure.min.css
static/js/: button.js  drivel.js  edit.js  evexpl.js  evexpldata.js  evexplval.js  jquery-ui.min.js  login.js  site.js  upload.js
