name:                elfeckcom
version:             0.1.0.0
synopsis:            My website: elfeck.com
homepage:            elfeck.com
license-file:        LICENSE
author:              Sebastian Kreisel
maintainer:          kreisel.sebastian@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable elfeckcom
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.8
                       , Spock >= 0.0.7
                       , blaze-html
                       , text
                       , transformers
                       , wai-middleware-static
                       , persistent == 2.1.*
                       , persistent-template == 2.1.*
                       , persistent-sqlite == 2.1.*
                       , time
                       , old-locale
                       , monad-logger
                       , resourcet
                       , aeson
  hs-source-dirs:      src
  default-language:    Haskell2010