name:                elfeckcom
version:             0.1.0.0
synopsis:            My website: elfeck.com
homepage:            elfeck.com
license-file:        LICENSE
author:              Sebastian Kreisel
maintainer:          kreisel.sebastian@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable elfeckcom
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base
                       , Spock >= 0.7.8
                       , blaze-html
                       , text
                       , transformers
                       , persistent == 2.1.*
                       , persistent-template == 2.1.*
                       , persistent-sqlite == 2.1.*
                       , time >= 1.5
                       , monad-logger
                       , resourcet
                       , aeson
                       , wai-middleware-static >= 0.6
                       , random
                       , cryptohash
                       , word8
                       , bytestring
                       , base16-bytestring
                       , directory
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
